Finished backpack. Not perfectly tested but it should work.

--- a/index.html
+++ b/index.html
@@ -338,31 +338,6 @@ CHANGES BY Forget_About_Me
     const outfitmax = 5; // maximum count of outfits
 
 
-    //  Randomness thresholds 1-10.
-    //  1 corresponds to 10% likelihood.
-    //  10 corresponds to 100% likelihood.
-    const rrlockedthresh = 7; // Likelihood of bar restroom locked ( occupied )
-    const rrlinethresh = 7; // Likelihood of line for restroom in club
-    const phoneholdthresh = 7; // Likelihood of her holding it for you on the phone
-    let spurtthresh = 5; // Likelihood of her spurting rather than wetting
-    let yspurtthresh = 3; // Likelihood of you spurting rather than wetting
-    let bribeaskthresh = 8; //Likelihood she'll hold it if you ask her when desperate
-
-    //  Attraction thresholds
-    const ptogetherthreshold = 100; // She'll take you with her to the bathroom.
-    const pnorestroomthreshold = 110; // She'll pee outside of the restroom.
-    const pwatchthreshold = 90; // You can watch her pee in a closed place.
-    const drinkinggamethreshold = 90; // She'll play your silly drinking game.
-    const photogamethreshold = 90; // She'll play your silly photo game
-    const photogamecthreshold = 100; // She'll play your silly photo game in costume
-    const photogamenthreshold = 110; // She'll play your silly photo game nude
-    const hottubthresh = 90; //  She'll strip and go into the hot tub
-    const holditneedthresh = 30; // She'll hold it for need
-    const holditemerthresh = 60; // She'll hold it for emergency
-    const holditlosethresh = 90; // She'll try to hold it for lose
-    const gomakeoutthresh = 40; // She'll go to the makeout spot
-
-
     //  Location handling stack
     //  initialized at the start.
     const locstack = Array(); //The first element in the Array is the current location
@@ -402,6 +377,7 @@ CHANGES BY Forget_About_Me
     let wetherpanties = 0; // did she ever wet herself?
     let prepeed = 0; // did she pee before you picked her up
     let champagnecounter = 0; // Number of glasses of champagne served.
+    let drankChamp = 0; // Time since last champagne glass was drunk.
     //TODO figure out where gottagoflag is actually used
     let gottagoflag = 0; // has she just asked to use the restroom
     let showedneed = 0; // has she just visually displayed her need
