--- a/index.html
+++ b/index.html
@@ -1315,6 +1315,11 @@ CHANGES BY Forget_About_Me
         s("<div style='text-align:right'><i>Hit Reload to start over...</i></div>");
     }
 
+    //Basically you got her into bed but not desperate
+    function gameSex(){
+
+    }
+
     function gamewet() {
         document.getElementById('textsp').innerHTML += "<p class='title'>Woot! </p>"
             + "<p style='text-align: center; padding-right: 10%; font-style: italic'>you took her to bed while she was bursting</p>"
