Changed buying so you can now buy multiple items at once. Also, several bug fixes.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@ CHANGES BY Forget_About_Me
 *the statusbar now just flashes temporary when an attribute changes instead of until the next button is pressed
 *The flashing of the statusbar now differentiates between positive(green) and negative(red) changed
 *During the movie, the only time attraction checks are used are at the beginning and the end.
+*Buying has been changed so you can now build up to 100 items at the same time, provided you have the money.
+    *Stealing is unchanged for now as payment for stealing.
 */
 
     //TODO potentially clean up if statements with multiple locations
