Worked on the closed club

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ CHANGES BY Forget_About_Me
 
     let showstats = 1; // 1 = Show her bladder state, etc.
     // Girl Selection Parameters
-    let photolevel = 0; // 0 = clothed, 1 = costumed, 2 = to be naked, 3 = naked.
+    let photoChoice; //How she's dressed for photogame
 
 
     let favoritemovie = "theurge";
