Finished closed club

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ CHANGES BY Forget_About_Me
     *The reason is that the other scenes are a bit of a minigame where you have to choose the right option
 *Buying has been changed so you can now buy up to 100 items at the same time, provided you have the money.
     *Stealing is unchanged for now, as it actually takes effort on the player's part.
+*Some bugs for the photoGame have been fixed
 */
 
     //TODO potentially clean up if statements with multiple locations
