Added disclaimer plus link to the github

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="scripts/games/darts.js"></script>
     <script src="scripts/fuckHer.js"></script>
     <script src="scripts/debugFunctions.js"></script>
+    <script src="scripts/pop-up.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
     <title>Melissa Explains it All</title>
@@ -61,12 +62,10 @@
             <p class="title">Melissa Explains it All </p>
             <p style="text-align: center">This game contains mature content.</p>
             <!--            TODO change class-->
-            <ul id="choices" class="choices-start">
-<!--                <li class="choices-items-start"><a href='javascript:go("start")'>Continue</a></li>-->
-<!--                <li class="choices-items-start"><a href='javascript:go("under18")'>Leave</a></li>-->
-<!--                <li class="choices-items-start"><a href='javascript:Object.keys(objects).forEach(key => objects[key].value = 2);'>All Items</a></li>-->
-            </ul>
+            <ul id="choices" class="choices-start"></ul>
             <pre style="padding-top: 10vh;padding-left:30vw;"><br>  ((<br>  -))<br>  /\) <br> ( |)<br>   \ \<br>   _/ )<br>  //-/<br>  ||<br>  d/<br></pre>
+            <br><br><p style="text-align: center"> Follow this project on github:</p>
+            <p style="text-align: center"><a href="https://github.com/FamTroder/FamMel"><img src="icons/GitHub-Mark-32px.png" ></a></p>
         </div>
         <a href="javascript:backpack()"><img id="backpack" src="icons/backpack.png" alt="Picture of girl" class="pic"></a>
     </div>
