Added setting to turn off disclaimer on subsequent visits. Bug fixes on the sex scenes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div id="titlebar">
-        <div id="engine">Base Game by drw</div>
+        <div id="engine">Game Engine 3.2a by drw</div>
         <div id="version">VER 4.2: June 24, 2020</div>
     </div>
     <br>
