--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div id="titlebar">
         <div id="engine">Game Engine 3.2a by drw</div>
-        <div id="version">V0.5.0: 20th February 2022</div>
+        <div id="version">V0.5.1: Date TBA</div>
     </div>
     <br>
     <hr>
